@@ -45,6 +45,7 @@ view=View
 voltmeter=Voltmeter
 volts=V
 voltsPerMeter=V/m
+voltsUnknown=?
 zoom=Zoom
 
 pattern.0value.1units={0} {1}
