@@ -1,3 +1,5 @@
+11/8/10 i18n of "?" for voltmeter display
+11/8/10 add close button to voltmeter, similar to bar meters
 11/8/10 fix close button on E-Field Detector
 # 0.00.37 (45831) Nov 8, 2010
 11/8/10 demo 3D probe with parallel projection
